[workspace]
members = [
    "ansilo-main",
    "ansilo-pgx",
    "ansilo-pg",
    "ansilo-core",
    "ansilo-config",
    "ansilo-auth",
    "ansilo-proxy",
    "ansilo-web",
    "ansilo-connectors/*",
    "ansilo-workbench",
    "ansilo-logging",
    "ansilo-util/*",
    "ansilo-e2e",
]

[profile.bench]
debug = true