[workspace]
resolver = "2"
members = [
    "ansilo-main",
    "ansilo-pgx",
    "ansilo-pg",
    "ansilo-core",
    "ansilo-config",
    "ansilo-auth",
    "ansilo-proxy",
    "ansilo-web",
    "ansilo-jobs",
    "ansilo-connectors/*",
    "ansilo-workbench",
    "ansilo-logging",
    "ansilo-util/*",
    "ansilo-e2e",
]

[profile.release]
strip = "debuginfo"