[workspace]
resolver = "2"
members = [
    "ansilo-main",
    "ansilo-pgx",
    "ansilo-pg",
    "ansilo-core",
    "ansilo-config",
    "ansilo-auth",
    "ansilo-proxy",
    "ansilo-web",
    "ansilo-jobs",
    "ansilo-connectors/*",
    "ansilo-workbench",
    "ansilo-logging",
    "ansilo-util/*",
    "ansilo-e2e",
]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
chrono = { version = "0.4", features = ["std", "clock", "time", "libc", "serde"] }
chrono-tz = { version = "0.6", features = ["serde"] }
enum-as-inner = "0.5"
itertools = "0.10"
rust_decimal = { version = "1.26", features = ["serde-str", "std", "maths", "tokio-pg"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
serde_with = "2.0"
serde_yaml = "0.9"
uuid = { version = "1.1", features = ["serde", "v4"] }
tokio = { version = "^1.20", features = ["socket2", "net", "rt", "rt-multi-thread", "io-util", "macros", "sync"] }
lazy_static = "1.4"
once_cell = "1.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1", "array-impls"] }
nix = "^0.25"
async-trait = "0.1"

[profile.release]
strip = "debuginfo"