[package]
name = "ansilo-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-pg = { path = "../ansilo-pg" }
ansilo-util-url = { path = "../ansilo-util/url" }
jsonwebtoken = "8"
jsonwebkey = { git = "https://github.com/EliseZeroTwo/jsonwebkey", features = ["jwt-convert"] }
md-5 = "0.10"
serde = "1.0"
serde_json = "1.0"
subtle = "2.4"

[dev-dependencies]
tempfile = "3.3.0"
