[package]
name = "ansilo-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["dep:tempfile"]

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-proxy = { path = "../ansilo-proxy" }
ansilo-util-url = { path = "../ansilo-util/url" }
jsonwebtoken = "8"
jsonwebkey = { git = "https://github.com/EliseZeroTwo/jsonwebkey", features = ["jwt-convert"] }
md-5 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
subtle = "2.4"
hex = "0.4"
tempfile = { version = "3.3", optional = true }
serde_yaml = { workspace = true }

[dev-dependencies]
serial_test = "*"
pretty_assertions = "*"
tokio = { workspace = true }
tempfile = "*"
