[package]
name = "ansilo-config"
version = "0.1.0"
edition = "2021"

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-util-url = { path = "../ansilo-util/url" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "^1.20", features = ["io-util", "rt"] }
vaultrs = { git = "https://github.com/jmgilman/vaultrs", default-features = false, features = [ "native-tls" ] }

[dev-dependencies]
httpmock = "0.6"
tempfile = "3.3.0"
serde_json = "1.0"
