[package]
name = "ansilo-config"
version = "0.1.0"
edition = "2021"

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-util-url = { path = "../ansilo-util/url" }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
vaultrs = { git = "https://github.com/jmgilman/vaultrs", default-features = false, features = [ "native-tls" ] }

[dev-dependencies]
httpmock = "0.6"
tempfile = "3.3.0"
serde_json = { workspace = true }
