[package]
name = "ansilo-connectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
jni = { git = "https://github.com/TimeToogo/jni-rs", features = ["invocation"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
