[package]
name = "ansilo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
enum-as-inner = { workspace = true }
itertools = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
