[package]
name = "ansilo-e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-connectors-base = { path = "../ansilo-connectors/base", features = ["test"] }
ansilo-connectors-jdbc-base = { path = "../ansilo-connectors/jdbc-base" }
ansilo-connectors-jdbc-oracle = { path = "../ansilo-connectors/jdbc-oracle" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-main = { path = "../ansilo-main" }
chrono = "0.4"
glob = "0.3"
itertools = "0.10"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
rust_decimal = { version = "1.26", features = ["tokio-pg"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
pretty_assertions = "1.2"
serial_test = "*"
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
