[package]
name = "ansilo-e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-connectors-base = { path = "../ansilo-connectors/base", features = ["test"] }
ansilo-connectors-jdbc-base = { path = "../ansilo-connectors/jdbc-base" }
ansilo-connectors-jdbc-oracle = { path = "../ansilo-connectors/jdbc-oracle" }
ansilo-connectors-jdbc-mysql = { path = "../ansilo-connectors/jdbc-mysql" }
ansilo-connectors-jdbc-teradata = { path = "../ansilo-connectors/jdbc-teradata" }
ansilo-connectors-jdbc-mssql = { path = "../ansilo-connectors/jdbc-mssql" }
ansilo-connectors-native-postgres = { path = "../ansilo-connectors/native-postgres" }
ansilo-connectors-native-sqlite = { path = "../ansilo-connectors/native-sqlite" }
ansilo-connectors-native-mongodb = { path = "../ansilo-connectors/native-mongodb" }
ansilo-connectors-file-base = { path = "../ansilo-connectors/file-base" }
ansilo-connectors-file-avro = { path = "../ansilo-connectors/file-avro" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-web = { path = "../ansilo-web" }
ansilo-main = { path = "../ansilo-main" }
ansilo-util-pgx-install = { path = "../ansilo-util/pgx-install" }
chrono = { workspace = true }
glob = "0.3"
itertools = { workspace = true }
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
pretty_assertions = "1.2"
serial_test = "*"
criterion = "0.3"
jsonwebtoken = "*"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tempfile = "3.3"
postgres-native-tls = "0.5"
native-tls = "0.2"

[[bench]]
name = "benches"
harness = false
