[package]
name = "ansilo-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-config = { path = "../ansilo-config" }
ansilo-connectors-all = { path = "../ansilo-connectors/all" }
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-pg = { path = "../ansilo-pg" }
ansilo-proxy = { path = "../ansilo-proxy" }
ansilo-auth = { path = "../ansilo-auth" }
ansilo-web = { path = "../ansilo-web" }
ansilo-jobs = { path = "../ansilo-jobs" }
ansilo-util-pg = { path = "../ansilo-util/pg" }
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
glob = "0.3"
lazy_static = "1.4"
notify = "4.0"
once_cell = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
nix = { version = "^0.25", features = ["process"] }
tokio = { version = "^1.20", features = ["io-util"] }

[dev-dependencies]
ansilo-util-pgx-install = { path = "../ansilo-util/pgx-install" }
assert_cmd = "2.0"
predicates = "2.1"
serial_test = "0.9"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
