[package]
name = "ansilo-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-connectors-base = { path = "../ansilo-connectors/base" }
ansilo-connectors-all = { path = "../ansilo-connectors/all" }
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-util-r2d2 = { path = "../ansilo-util/r2d2" }
ansilo-util-pg = { path = "../ansilo-util/pg" }
bincode = { version = "2.0.0-rc.1" }
serde_json = "1.0"
nix = "0.24"
lazy_static = "1.4"
tokio = { version = "^1.20", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
deadpool = { version = "0.9", features = ["rt_tokio_1"] }
deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
tokio-postgres = "0.7"

[dev-dependencies]
ansilo-connectors-memory = { path = "../ansilo-connectors/memory" }
pretty_assertions = "*"
tokio-test = "0.4"
