[package]
name = "ansilo-pg"
version = "0.1.0"
edition = "2021"

[features]
test = ["dep:ansilo-util-pgx-install"]

[dependencies]
ansilo-connectors-base = { path = "../ansilo-connectors/base" }
ansilo-connectors-all = { path = "../ansilo-connectors/all" }
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-auth = { path = "../ansilo-auth" }
ansilo-proxy = { path = "../ansilo-proxy" }
ansilo-util-r2d2 = { path = "../ansilo-util/r2d2" }
ansilo-util-pg = { path = "../ansilo-util/pg" }
ansilo-util-pgx-install = { path = "../ansilo-util/pgx-install", optional = true }
bincode = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
deadpool = { version = "0.9", features = ["rt_tokio_1"] }
deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
tokio-postgres = { workspace = true }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
ansilo-util-pgx-install = { path = "../ansilo-util/pgx-install" }
ansilo-connectors-memory = { path = "../ansilo-connectors/memory" }
ansilo-auth = { path = "../ansilo-auth", features = ["test"] }
pretty_assertions = "*"
tokio-test = "0.4"

[build-dependencies]
# We add this as a build depedency so the build script does not run
# in parallel with build scripts of the connectors which causes
# concurrent maven builds which error out
ansilo-connectors-all = { path = "../ansilo-connectors/all" }