[package]
name = "ansilo-pgx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = [
    "dep:ansilo-connectors-base",
    "dep:ansilo-connectors-memory",
    "dep:ansilo-connectors-all",
    "dep:ansilo-util-debug",
    "dep:assert-json-diff",
    "pgx-tests",
    "dep:postgres",
    "dep:pretty_assertions",
]

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-pg = { path = "../ansilo-pg" }
cstr = "0.2.10"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
time = "0.3"
pgx = "=0.5.0-beta.0"
itertools = "0.10"
lazy_static = "1.4"
postgres = { version = "0.19.3", optional = true }
subtle = "2.4"

# test deps (but also needs to be enabled for pg_test feature)
ansilo-connectors-base = { path = "../ansilo-connectors/base", optional = true }
ansilo-connectors-memory = { path = "../ansilo-connectors/memory", optional = true }
ansilo-connectors-all = { path = "../ansilo-connectors/all", optional = true }
ansilo-util-debug = { path = "../ansilo-util/debug", optional = true }
assert-json-diff = { version = "2.0", optional = true }
pgx-tests = { version = "=0.5.0-beta.0", optional = true }
pretty_assertions = { version = "1.2", optional = true }

[dev-dependencies]
ansilo-connectors-base = { path = "../ansilo-connectors/base" }
ansilo-connectors-memory = { path = "../ansilo-connectors/memory" }
ansilo-connectors-all = { path = "../ansilo-connectors/all" }
ansilo-util-debug = { path = "../ansilo-util/debug" }
assert-json-diff = { version = "2.0" }
pgx-tests = { version = "=0.5.0-beta.0" }
postgres = { version = "0.19.3" }
pretty_assertions = "*"

# [profile.dev]
# panic = "unwind"
# lto = "thin"

# [profile.release]
# panic = "unwind"
# opt-level = 3
# lto = "fat"
# codegen-units = 1
