[package]
name = "ansilo-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
rustls = "0.20"
socket2 = "0.4"
rustls-pemfile = "1.0"
tokio = { version = "1.20", features = ["socket2", "net", "rt", "rt-multi-thread", "io-util", "macros"] }
tokio-rustls = "0.23"
async-trait = "0.1"

[dev-dependencies]
nix = "0.25"
