[package]
name = "ansilo-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
socket2 = "0.4"
tokio-native-tls = "0.3"
rustls-pemfile = "1.0"
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

[dev-dependencies]
nix = { workspace = true }
