[package]
name = "ansilo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-auth = { path = "../ansilo-auth" }
ansilo-pg = { path = "../ansilo-pg" }
ansilo-proxy = { path = "../ansilo-proxy" }
ansilo-connectors-base = { path = "../ansilo-connectors/base" }
ansilo-connectors-native-postgres = { path = "../ansilo-connectors/native-postgres" }
axum = "^0.6.0-rc.1"
hyper = { version = "^0.14", features = ["http1", "http2", "stream"] }
tokio = "^1.20"
tokio-stream = "^0.1"
tower = "0.4"
serde = "1.0"
