[package]
name = "ansilo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../ansilo-core" }
ansilo-logging = { path = "../ansilo-logging" }
ansilo-auth = { path = "../ansilo-auth" }
ansilo-pg = { path = "../ansilo-pg" }
ansilo-proxy = { path = "../ansilo-proxy" }
ansilo-connectors-base = { path = "../ansilo-connectors/base" }
ansilo-connectors-native-postgres = { path = "../ansilo-connectors/native-postgres" }
# Ensure the frontend gets compiled to out directory
ansilo-workbench = { path = "../ansilo-workbench" }
axum = "^0.6.0-rc.1"
hyper = { version = "^0.14", features = ["http1", "http2", "stream"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tokio = { workspace = true }
tokio-stream = "^0.1"
tokio-postgres = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
serde_yaml = { workspace = true }
base64 = "0.13"
tracing = "0.1"
hex = "0.3"
axum-macros = "0.2"