[package]
name = "ansilo-connectors-all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-connectors-memory = { path = "../memory" }
ansilo-connectors-jdbc-base = { path = "../jdbc-base" }
ansilo-connectors-jdbc-oracle = { path = "../jdbc-oracle" }
ansilo-connectors-jdbc-mysql = { path = "../jdbc-mysql" }
ansilo-connectors-jdbc-teradata = { path = "../jdbc-teradata" }
ansilo-connectors-jdbc-mssql = { path = "../jdbc-mssql" }
ansilo-connectors-native-postgres = { path = "../native-postgres" }
ansilo-connectors-native-sqlite = { path = "../native-sqlite" }
ansilo-connectors-native-mongodb = { path = "../native-mongodb" }
ansilo-connectors-peer = { path = "../peer" }
ansilo-connectors-internal = { path = "../internal" }

