[package]
name = "ansilo-connectors-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build = ["dep:fd-lock"]
test = []

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
bincode = "2.0.0-rc.1"
enum-as-inner = "0.5"
itertools = "0.10"
jni = { git = "https://github.com/TimeToogo/jni-rs", features = ["invocation"] }
lazy_static = "1.4.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fd-lock = { version = "^3.0", optional=true }