[package]
name = "ansilo-connectors-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build = ["dep:fd-lock"]
test = []

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
bincode = { workspace = true }
enum-as-inner = { workspace = true }
itertools = { workspace = true }
jni = { git = "https://github.com/TimeToogo/jni-rs", features = ["invocation"] }
lazy_static = { workspace = true }
r2d2 = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
fd-lock = { version = "^3.0", optional=true }