[package]
name = "ansilo-connectors-file-avro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-connectors-file-base = { path = "../file-base" }
# TODO: change to crates.io when next release happens on https://crates.io/crates/apache-avro
apache-avro = { git = "https://github.com/apache/avro" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
pretty_assertions = "*"
serial_test = "*"
