[package]
name = "ansilo-connectors-jdbc-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-util-r2d2 = { path = "../../ansilo-util/r2d2" }
bincode = { workspace = true }
itertools = { workspace = true }
jni = { git = "https://github.com/TimeToogo/jni-rs", features = ["invocation"] }
once_cell = { workspace = true }
r2d2 = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
cesu8 = "1.1"

[build-dependencies]
ansilo-connectors-base = { path = "../base", features = ["build"] }
