[package]
name = "ansilo-connectors-jdbc-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-connectors-jdbc-base = { path = "../jdbc-base" }
bincode = "2.0.0-rc.1"
itertools = "0.10.3"
jni = { git = "https://github.com/TimeToogo/jni-rs", features = ["invocation"] }
lazy_static = "1.4.0"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
ansilo-connectors-base = { path = "../base", features = ["build"] }
ansilo-connectors-jdbc-base = { path = "../jdbc-base" }

[dev-dependencies]
ansilo-connectors-base = { path = "../base", features = ["test"] }
