[package]
name = "ansilo-connectors-jdbc-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
ansilo-connectors-jdbc-base = { path = "../jdbc-base" }
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
ansilo-connectors-base = { path = "../base", features = ["build"] }
ansilo-connectors-jdbc-base = { path = "../jdbc-base" }

[dev-dependencies]
ansilo-connectors-base = { path = "../base", features = ["test"] }
pretty_assertions = "*"
serial_test = "*"
