[package]
name = "ansilo-connectors-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansilo-core = { path = "../../ansilo-core" }
ansilo-logging = { path = "../../ansilo-logging" }
ansilo-connectors-base = { path = "../base" }
bincode = "2.0.0-rc.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions = "*"
